copy update and image cut off issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,7 @@
 .text--cream {
   color: $cream;
 }
+
+.text--orange {
+  color: $orange;
+}
